--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,13 +18,23 @@
 <div id="pc-container">
 	<div class="background">
 	 <div class="main-header clearfix">
-		<div class="logo clearfix"><a href="#">upvoc
-			<p class="logo-p">improve your english vocabulary</p></a>
+		<div class="logo">
+			<a href="#">upvoc</a>
+			<p class="logo-p">improve your <br> english vocabulary</p>
 		</div>
-		<div class="header">
-			<div class="top-section">
-				<div class="content">
-					<p class="soc-p">login via:</p>
+			<div class="lang-select">
+			<span>My language:</span>
+					<select class='switch-lang'>
+					<option value="1">Russian</option>
+					<option value="2">English</option>
+					<option value="3">Grech</option>
+					<option value="4">Turkish</option>
+					<option value="5">Spanish</option>	
+				</select>
+			</div>
+			<div class="enter-block">
+				<a href = '#'class="login-m">Eduard Voinich /   Sign out</a>
+			</div>
 					<div class="sign-bg">
 					<div class="sign">
 						<div class="sign-in">Sign In</div>
@@ -47,20 +57,6 @@
 						<div class="sign-close">Close</div>
 					</div>
 					</div>
-				<div class="soc-ic">
-					<a href="https://vk.com" class="ic vk-ic"></a>
-					<a href="https://www.facebook.com/" class="ic vk-fb"></a>
-					<a href="https://twitter.com/" class="ic vk-tw"></a>
-					<a href="ok.ru" class="ic vk-ok"></a>
-				</div>
-				<span>My language:</span>
-					<select class='switch-lang'>
-					<option value="1">Russian</option>
-					<option value="2">English</option>
-					<option value="3">Grech</option>
-					<option value="4">Turkish</option>
-					<option value="5">Spanish</option>	
-				</select>
 				<div class="enter"></div>
 				<div class="showsettings"><span class="showspan">Show my translations</span></div>
 				<!--<div class="settings-section clearfix">
@@ -124,17 +120,17 @@
 		</div>
 
 			<div class="bottom-section">
-				<ul class="menu">
-					<li><a href="#">World</a></li>
-					<li><a href="#">Sport</a></li>
-					<li><a href="#">Technology</a></li>
-					<li><a href="#">Entertainment</a></li>
-					<li><a href="#">style</a></li>
-					<li><a href="#">travel</a></li>
+				<ul class="menu clearfix">
+					<li><a href="#"><span>World</span></a></li>
+					<li><a href="#">Sport</span></a></li>
+					<li><a href="#">Technology</span></a></li>
+					<li><a href="#">Entertainment</span></a></li>
+					<li><a href="#">Style</span></a></li>
+					<li><a href="#">Travel</span></a></li>
 				</ul>
 			</div>
 			</div>
-		</div>
+	</div>
 	</div>
 		<div class="middle-section clearfix">
 		<div class="top-line clearfix">
