--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -202,7 +202,8 @@
   }
   .news {
     font: 13px 'Goodosf', sans-serif;
-    letter-spacing: 0px;
+    letter-spacing: 
+    0px;
     
   }
   .word {
