--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,8 @@
 <div class="bg-container">
 			
 		</div>
+<div id="blue-header"></div>
+<div id="content-wrapper">	
 <div id="pc-container">
 	<div class="background">
 	 <div class="main-header clearfix">
@@ -59,56 +61,6 @@
 					</div>
 				<div class="enter"></div>
 				<div class="showsettings"><span class="showspan">Show my translations</span></div>
-				<!--<div class="settings-section clearfix">
-					<div class="settings-title">
-						<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
-					</div>
-					<div class="settings-slide">
-						<div class="settings-news">
-							<h4 class="news-title">News Sources</h4>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="bbc">
-							<label for="bbc">BBC</label>
-							</div>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="tech">
-							<label for="tech">TECHCRUNCH</label>
-							</div>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="econom">
-							<label for="econom">Economist</label>
-							</div>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="usatoday">
-							<label for="usatoday">USA Today</label>
-							</div>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="forbes">
-							<label for="forbes">Forbes</label>
-							</div>
-							<div class="box">
-							<input type="checkbox" class="checkbox-settings" id="telegraph">
-							<label for="telegraph">Telegraph</label>
-							</div>
-
-						</div>
-						<div class="settings-lang-dif">
-							<h4>Languiage difficulty:</h4>
-							<div class="range-filter">
-								<div class="range-controls">
-									<div class="scale"><div class="bar"></div></div>
-									<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
-									<label for="slidedifficult1" class="circle circle1"></label>
-									<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
-									<label for="slidedifficult2" class="circle circle2"></label>
-									<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
-									<label for="slidedifficult3" class="circle circle3"></label>
-									<span class="range-controls-hard">Hard</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>-->
 			</div>
 			</div>
 		<div class="translate-window">
@@ -122,31 +74,27 @@
 			<div class="bottom-section">
 				<ul class="menu clearfix">
 					<li><a href="#"><span>World</span></a></li>
-					<li><a href="#">Sport</span></a></li>
-					<li><a href="#">Technology</span></a></li>
-					<li><a href="#">Entertainment</span></a></li>
-					<li><a href="#">Style</span></a></li>
-					<li><a href="#">Travel</span></a></li>
+					<li><a href="#"><span> Sport</span></a></li>
+					<li><a href="#"><span> Technology</span></a></li>
+					<li><a href="#"><span> Entertainment</span></a></li>
+					<li><a href="#"><span>Style</span></a></li>
+					<li><a href="#"><span>Travel</span></a></li>
 				</ul>
-			</div>
-			</div>
-	</div>
-	</div>
+			</div>	
 		<div class="middle-section clearfix">
 		<div class="top-line clearfix">
-				<div class="titlebox">
-					<h3 class="title-line">Tip of the Day:</h3>
-				</div>
 				<div class="allocation">
-					<p>Выделите слово и увидите его перевод</p>
+					<p>Click unknown word to see its translation</p>
 				</div>
-
-				<div class="showbtn"><input type="checkbox" class="checkbox" id="show">
-						<label for="show">Don’t show tips</label>
 						<div class="close" title="закрыть">Закрыть</div>
-				</div>
 		</div>
-		<div class="functions-language">
+	
+			<div class="center-content clearfix">
+			</div>
+
+			<div class="dictionaries-section clearfix">
+			</div>
+			<div class="functions-language">
 				<h3>User Settings</h3>
 				<div class="functions-language-slider">
 					<span>Language difficulty:</span>
@@ -181,13 +129,10 @@
 							</div>
 				</div>
 			</div>	
-			<div class="center-content clearfix">
-			</div>
-
-			<div class="dictionaries-section clearfix">
-			</div>
 			</div>
 </div>
+</div>
+	
 
 
 	<div id="wrapper">
