--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -40,15 +40,20 @@
 <div class="clearfix"></div>
 <div class="dictionary">
     <div class="transcription-f">
-        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
-        <h5>переход, перевод</h5>
-    </div>
+     <input type="checkbox" class="dict-checkbox" id="1">
+             <label for="1"><div class="tr-words"><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></div>
+        <h5 class="translating">переход, перевод</h5></label>                        
+                            </div>                      
     <div class="transcription-f">
-        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
-        <h5>переход, перевод</h5>
-    </div>
+    <input type="checkbox" class="dict-checkbox" id="2">
+                          <label for="2"><div class="tr-words"><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></div>
+        <h5 class="translating">переход, перевод</h5></label>           
+                            </div>
     <div class="transcription-f">
-        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
-        <h5>переход, перевод</h5>
+    <input type="checkbox" class="dict-checkbox" id="3">
+       <label for="3"><div class="tr-words"><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></div>
+        <h5 class="translating">переход, перевод</h5></label>      
     </div>
+    <div class="word-delete">Delete selected</div>
+            <div class="word-cancel">Cancel</div>
 </div>
