--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,21 +81,21 @@
 					<li><a href="#"><span>Travel</span></a></li>
 				</ul>
 			</div>	
-		<div class="middle-section clearfix">
+		<div class="middle-section">
 		<div class="top-line clearfix">
 				<div class="allocation">
 					<p>Click unknown word to see its translation</p>
 				</div>
-						<div class="close" title="закрыть">Закрыть</div>
 		</div>
 	
-			<div class="center-content clearfix">
-			</div>
+			<div class="center-content clearfix"></div>
 
 			<div class="dictionaries-section clearfix">
+			<button class="word-delete"></button>
+			<button class="word-cancel"></button>
 			</div>
 			<div class="functions-language">
-				<h3>User Settings</h3>
+				<h3>My settings</h3>
 				<div class="functions-language-slider">
 					<span>Language difficulty:</span>
 					<span class="level">Medium</span>
@@ -130,12 +130,13 @@
 				</div>
 			</div>	
 			</div>
-</div>
+			</div>
+			</div>
 </div>
 	
 
 
-	<div id="wrapper">
+	<!--<div id="wrapper">
 		<header class="main-head">
 			<div class="top-section-m clearfix">
 				<a href="#"><p class="upvoc">Upvoc</p></a>
@@ -276,7 +277,7 @@
 
 			</div>
 		</div>
-	</div>
+	</div>-->
 			<script src="/js/myapp.js"/>
 	<!-- Yandex.Metrika counter -->
 
