--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -86,7 +86,7 @@ ul{
 }
 .lang-select {
 	float: left;
-	width: 250px;
+	width: 302px;
 	background: #394778;
 	padding-top: 20px;
     padding-bottom: 19px;
@@ -143,8 +143,8 @@ ul{
 	color: white;
 	font-size: 12px;
 	position: absolute;
-	left: 190px;
-	bottom: 15px;
+	left: 160px;
+	bottom: 12px;
 	width: 120px;
 }
 p{
@@ -264,7 +264,7 @@ p{
 }
 .menu li:first-child{
 	margin-left: 0;
-	padding-left: 50px;
+	padding-left: 20px;
 
 }
 .menu li:first-child a {
@@ -278,22 +278,21 @@ p{
 	text-align: left;
 	background: #f6f6f6;
 	margin-top: 60px;
-	width: 640px;
+	width: 639px;
 
 
 	
 }
 #blue-header {
-	width: 3000px;
-	overflow: hidden;
+	width: 100%;
 	height: 60px;
 	position: fixed;
 	background: #4e6ba5;
 	top: 0;
+	left: 0;
 	z-index: 1;
 }
 #pc-container {
-	width: 960px;
 	margin: 0 auto;
 }
 .menu li {
@@ -310,8 +309,9 @@ p{
 }	
 .middle-section{
 	width: 910px;
+	margin: 0 auto;
 	margin-top: 10px;
-	background: white;
+	background: #e2e2e2;
 }
 .top-line{
 	width: 640px;
@@ -715,14 +715,6 @@ p{
 	font: 10px 'Helvetica', sans-serif;
 	color: #999999;
 }
-.dictionaries-section{
-	float: right;
-	width: 240px;
-	background: #F7F7F7;
-	margin-right: 10px;
-	margin-top: 20px;
-    z-index: 4;
-}
 .dict-title h3{
 	font: 26px/31px 'Condensed-Bold', sans-serif;
 	text-transform: uppercase;
@@ -777,10 +769,11 @@ p{
 }
 .center-content{
 	float: left;
-	margin-left: 10px;
+	padding-left: 20px;
     width: 620px;
     color: #2A81B4;
     padding-top: 20px;
+    background: #f6f6f6;
 }
  .name-news{
  	display: inline-block;
@@ -1081,9 +1074,6 @@ p{
 	margin-top: 4px;
 	margin-bottom: 18px;
 }
-.left-title-auto{
-	margin-bottom: 21px;
-}
 .left-title-show{
 	font: 11px 'Helvetica', sans-serif;
 	font-weight: bold;
@@ -1141,13 +1131,21 @@ p{
 	background: url('../img/filter-arrow.png');
 }
 .dictionary{
-	padding-right: 20px;	
-	height: 340px;
-	overflow-y: scroll;
+	padding-right: 10px;	
+	height: 140px;
     overflow-x: hidden;
+    margin-left: 0;
 
 
 	
+}
+.translating {
+	display: inline;
+	position: relative;
+	right: 10px;
+}
+.tr-words {
+	display: inline-block;
 }
 .transcription{
 	font: 13px 'Helvetica', sans-serif;
@@ -1162,15 +1160,21 @@ p{
 	font-weight: bold;
 	opacity: 0.7;
 	margin-left: 20px;
+	display: inline-block;
+	margin-top: 15px;
 }
+.transcription-f span {
+	font: 14px 'Helvetica-Neu', sans-serif;
+}
+
 .dictionary:first-child{
 
 	border-top: 1px solid #F7F7F7;
 	border-bottom: 1px dashed #5D5D5D;
+	margin-left: 10px;
 }
 .dictionary:last-child{
 	border-bottom: solid 1px #999999;
-	margin-left: 20px;
 	margin-bottom: 50px;
 }
 
@@ -1210,8 +1214,8 @@ p{
 	display: none;
 }
 #content-wrapper {
-	width: 910px;
 	margin: 0 auto;
+	width: 910px;
 }
 .translate-window {
 	width: 266px;
@@ -1533,35 +1537,33 @@ p{
 
 }
 .functions-language {
-	width: 266px;
+	width: 310px;
 	float: right;
-}
-.functions-language {
   color: black;
   position: fixed;
-  top: 447px;
-  width: 266px;
-  right: 250px;
+  top: 457px;
+  right: 280px;
   z-index: 101;
   background: #ffffff;
 }
 .functions-language h3 {
-  background: #eeeeee;
-  width: 266px;
+  background: #a8191d;
+  width: 290px;
   font: 14px/25px 'Helvetica-Bold', sans-serif;
-  padding-left: 10px;
   padding-top: 4px;
   padding-bottom: 4px;
+  padding-left: 20px;
   margin-top: 0;
+  color: white;
   position: relative;
 }
 .functions-language h3:after {
   content: '';
   width: 20px;
   height: 20px;
-  top: 6px;
+  top: 16px;
   left: 90%;
-  background: url('../img/close.png') no-repeat;
+  background: url('../img/settings-arrow.png') no-repeat;
   position: absolute;
 }
 .functions-language-slider span {
@@ -1654,6 +1656,309 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 .translate-window-transcription {
   font-family: 'HelveticaNeu', sans-serif;
+}
+.dictionaries-section {
+  position: fixed;
+  z-index: 15;
+  right: 280px;
+  height: 340px;
+  top: 70px;
+  width: 310px;
+  bottom: 0%;
+  background: white;
+}
+.dict-title h3:before {
+  display: none;
+}
+.dict-title h3:after {
+  display: none;
+}
+.dict-title h3 a {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+  padding-left: 20px;
+}
+.dict-title h3 {
+  background: white;
+  width: 100%;
+  margin: 0;
+  position: relative;
+}
+.dict-title h3 a:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+
+  background: url('../img/close.png') no-repeat;
+  position: absolute;
+  top: 8px;
+  left: 90%;
+}
+.dict-title:after {
+  display: none;
+}
+.left-title-save, .right-col-func-select-1, .left-title-show, .right-col-func-select-2 {
+  display: none;
+}
+.slider-check2 {
+  margin-top: 15px;
+  position: relative;
+  left: 35px;
+}
+.left-title-auto {
+  display: inline-block;
+  margin: 0;
+  margin-top: 20px;
+  font: 14px 'Helvetica', sans-serif;
+  color: black;
+}
+.left-title-word {
+  display: inline-block;
+  margin: 0;
+   font: 14px 'Helvetica', sans-serif;
+   color: black;
+   position: relative;
+   left: 70px;
+}
+.slider-check {
+  display: inline-block;
+  position: relative;
+  right: 90px;
+  bottom: 22px;
+  width: 40px;
+  height: 18px;
+  background: white;
+  border: 1px solid #808080;
+  box-shadow: none;
+}
+.slider-check2 {
+  display: inline-block;
+  width: 40px;
+  height: 18px;
+  background: white;
+   border: 1px solid #808080;
+   box-shadow: none;
+   right: 20px;
+   bottom: 22px;
+   margin-top: 0;
+}
+.sorting-block-title, .sortby, .time {
+  color: black;
+  font: 14px 'Helvetica-Med', sans-serif;
+}
+.slider-check label:after {
+  display: none;
+}
+.slider-check2 label:after {
+  display: none;
+}
+.slider-check:after {
+  display: none;
+}
+.slider-check label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+   border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check2 label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+  border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
+
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check2 input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
+
+}
+.slider-check2:after {
+  display: none;
+}
+.left-col-func {
+  width: 160px;
+  margin-top: 5px;
+}
+.right-col-func {
+  margin-right: 40px;
+ margin-bottom: 2px;
+ margin-top: 5px;
+}
+.functions {
+  margin-top: 1px;
+  background: #f6f6f6;
+}
+.sorting-block {
+  background: #eeeeee;
+  width: 100%;
+  margin: 0;
+  margin-top: 1px;
+  border: none;
+}
+.sorting-block-title {
+  margin-left: 20px;
+  margin-top: 0;
+  padding-top: 0;
+  margin-top: 8px;
+}
+.sorting-block select {
+  background: #eeeeee;
+  border: none;
+  margin-left: 30px;
+  width: 40px;
+  margin-top: 8px;
+
+}
+.dictionaries-section:after {
+  content: 'Edit list';
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  bottom: 0%;
+  background: #7c1216;
+  color: white;
+  padding-left: 45%;
+  padding-top: 10px;
+  font: 14px 'Helvetica', sans-serif;
+}
+.dictionary:last-child {
+  border-bottom: none;
+}
+.transcription-f h5 {
+  display: inline-block;
+  font-size: 14px;
+  margin: 0;
+}
+.transcription-f {
+  margin-left: 0;
+  color: black;
+  font: 14px 'Helvetica', sans-serif;
+}
+.transcription-f label {
+	position: relative;
+	left: 30px;
+}
+.transition-word {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  color: black;
+}
+
+.transcription-word {
+  font: 14px 'Helvetica', sans-serif;
+  color: #808080;
+  margin-right: 20px;
+  position: relative;
+  display: inline-block;
+}
+.transcription-word:after {
+  content: '';
+  height: 1px;
+  width: 8px;
+  position: absolute;
+  background: black;
+  top: 9px;
+  left: 82px;
+}
+.sortby:after {
+  top: 16px;
+  left: 27px;
+}
+.time:after {
+  left: 81px;
+  top: 16px;
+  right: 90px;
+}
+.time {
+  right: 60px;
+}
+.sign {
+  left: 13%;
+  background: white;
+  z-index: 99;
+  opacity: 1;
+  bottom: 14%;
+}
+.sorting-block select {
+  background: #eeeeee;
+  border: none;
+  margin-left: 30px;
+  width: 45px;
+  margin-top: 8px;
+
+}
+.dict-checkbox {
+  display: none;
+}
+
+.dict-checkbox + label{
+  position: relative;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.dict-checkbox + label::before{
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  left: -25px;
+  bottom: -2px;
+  border: 1px solid #808080;
+  background: white;
+}
+
+.dict-checkbox:checked + label::before{
+  background: white url("../img/checkbox.png") no-repeat;
+  background-position: 1px 3px;
+}
+.word-delete {
+	width: 155px;
+	background: #a8191d;
+	z-index: 1499;
+	position: fixed;
+	top: 390px;
+	right: 280px;
+	text-align: center;
+	vertical-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: white;
+}
+.word-cancel {
+	width: 155px;
+	background: #828282;
+	z-index: 1500;
+	position: fixed;
+	top: 390px;
+	right: 435px;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: white;
 }
 
 	
