--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,8 +1,9 @@
 <div class="novelty">
     <h2 class="name-news"><a>{{{ processedTitle }}}</a></h2>
+    <span class="original-article-link">Original&nbsp;article:&nbsp;<a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a></span>
+    <a href="#"><blockquote class="newsinform">{{ name }} – {{ formattedDate }}</blockquote></a>
     <p class="news"><span></span>{{{ body }}}</p>
     <p>
-        <a href="#"><blockquote class="newsinform">{{ name }} – {{ formattedDate }}</blockquote></a>
 
     </p>
 </div>
