--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -753,13 +753,14 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 #content-wrapper {
   width: 370px;
+  margin: 0;
 }
 .lang-select span {
     text-align: center;
-    margin-left: 10px;
+    margin-left: 30px;
 }
   .main-header {
-    width: 320px;
+    width: 375px;
     border-bottom: none;
   }
   .settings-section, .soc-ic, .soc-p{
@@ -770,7 +771,7 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 320px !important;
   }
     .middle-section .center-content {
-    width: 310px;
+    width: 375px;
     background: white;
   }
   .middle-section {
@@ -790,7 +791,7 @@ input[type=range]::-webkit-slider-runnable-track {
 }
   .lang-select {
   float: left;
-  width: 172px;
+  width: 222px;
   background: #394778;
   padding-top: 18px;
     padding-bottom: 18px;
@@ -819,12 +820,13 @@ input[type=range]::-webkit-slider-runnable-track {
     background: #4e6ba5;
     padding: 0;
     padding-right: 15px;
-    width: 78px;
+    width: 80px;
     height: 54px;
   }
   .main-header .logo a {
     color: white;
-    padding-left: 16px;
+    position: relative;
+    right: 10px;
    margin-top: 20px;
   }
   .main-header .header {
@@ -868,10 +870,10 @@ input[type=range]::-webkit-slider-runnable-track {
     height: 54px;
     width: 53px;
     background: #4e6ba5 url('../img/enter-icon.png') no-repeat;
-    background-position: 10px 10px;
+    background-position: 10px 15px;
     position: relative;
     background-size: 50%;
-    bottom: 17px;
+    top: 0px;
   }
   .menu li:nth-child(5),
     .menu li:nth-child(6) {
@@ -906,13 +908,14 @@ input[type=range]::-webkit-slider-runnable-track {
     padding-top: 5px;
     padding-bottom: 5px;
     position: relative;
+    bottom: 10px;
     width: 310px;
   }
   .allocation p:after {
     content: '';
     position: absolute;
     top: -7px;
-    left: 100px;
+    left: 330px;
     width: 40px;
     height: 40px;
     float: right;
@@ -928,7 +931,7 @@ input[type=range]::-webkit-slider-runnable-track {
     margin: 0;
     position: relative;
     bottom: 6px;
-    left: -28px;
+    left: -25px;
     
   }
   .showbtn {
@@ -967,11 +970,12 @@ input[type=range]::-webkit-slider-runnable-track {
   }
 
   .switch-lang {
-    background: #7c1216;
+    background: #394778;
     border: none;
     padding-right: 6px;
+  
     position: relative;
-    top: 1px;
+    top: 0px;
     color: white;
      font: 14px 'Helvetica', sans-serif;
      -webkit-appearance: none;
@@ -1012,6 +1016,7 @@ input[type=range]::-webkit-slider-runnable-track {
  .showspan {
     font: 13px 'Helvetica-Med', sans-serif;
     text-align: center;
+    padding-left: 120px;
   }
   .translate-window {
   width: 266px;
@@ -1413,7 +1418,7 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 243px;
   }
 
-  .center-content {
+  .middle-selection .center-content {
     margin: 0;
     width: 305px;
     padding-left: 10px;
@@ -1506,9 +1511,10 @@ input[type=range]::-webkit-slider-runnable-track {
     background: #4e6ba5 url('../img/enter-icon.png') no-repeat;
     background-position: 10px 14px;
     position: relative;
-    bottom: -1px;
+    top: -54px;
     background-size: 50%;
   }
+
   .switch-lang {
      
       background: transparent;
@@ -1555,6 +1561,7 @@ input[type=range]::-webkit-slider-runnable-track {
     padding-left: 40px;
     width: 280px;
     position: relative;
+    top: 1px;
   }
 
   .showsettings {
@@ -1923,6 +1930,10 @@ input[type=range]::-webkit-slider-runnable-track {
     height: 30px;
     display: block;
 }
+  .middle-section .center-content {
+    width: 320px;
+    background: white;
+  }
 
 
 }
